terraform/ec2.tf
# Data Source - AMI Ubuntu

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# Instance EC2 - K3s (Spot Instance)

resource "aws_spot_instance_request" "ec2" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.ec2.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2.name
}

  wait_for_fulfillment = true  

  tags = {
    Name = "${var.project_name}-k3s"
  }

# Elastic IP

resource "aws_eip" "ec2" {
  domain = "vpc"

  tags = {
    Name = "${var.project_name}-ec2-eip"
  }
}
